--- a/app/static/estilos/styleRegistro.css
+++ b/app/static/estilos/styleRegistro.css
@@ -5,9 +5,12 @@
     -moz-box-shadow: 0px 0px 0px 7px rgba(127, 111, 129, 0.774);
   }
   body {
+  min-height: 100vh;
   background-image: url("../archivos/fondo.jpeg");
+  background: url("../archivos/fondo.jpeg")no-repeat;
   background-size: cover; /* Adjusts the image size to cover the container */
   background-repeat: no-repeat; /* Prevents the image from repeating */
-  background-position: center center; /* Centers the image horizontally and vertically */
+  background-position: center; /* Centers the image horizontally and vertically */
   /* Additional background properties if needed */
+
 }
