--- a/app/static/estilos/styleRegistro.css
+++ b/app/static/estilos/styleRegistro.css
@@ -1,16 +1,123 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'poppins',sans-serif;
+}
 
-.custom-input {
-    box-shadow: 0px 0px 0px 7px rgba(127, 111, 129, 0.774);
-    -webkit-box-shadow: 0px 0px 0px 7px rgba(127, 111, 129, 0.774);
-    -moz-box-shadow: 0px 0px 0px 7px rgba(127, 111, 129, 0.774);
-  }
-  body {
+
+section{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
-  background-image: url("../archivos/fondo.jpeg");
-  background: url("../archivos/fondo.jpeg")no-repeat;
-  background-size: cover; /* Adjusts the image size to cover the container */
-  background-repeat: no-repeat; /* Prevents the image from repeating */
-  background-position: center; /* Centers the image horizontally and vertically */
-  /* Additional background properties if needed */
+  width: 100%;
 
+  background-image: url("../archivos/fondo.jpeg")no-repeat;
+  background: url("../archivos/fondo.jpeg");
+  background-position: center;
+  background-size: cover;
+}
+
+
+.form-box{
+  position: relative;
+  width: 350px;
+  height: 400px;
+  background: transparent;
+  border: 2px solid white;
+  border-radius: 20px;
+  backdrop-filter: blur(15px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+h2{
+  font-size: 2em;
+  color: #ffffff;
+  text-align: center;
+}
+
+.inputbox{
+  position: relative;
+  margin: 30px 0;
+  width: 310px;
+  border-bottom: 2px solid #fff;
+}
+.inputbox label{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  color: #fff;
+  font-size: 1em;
+  pointer-events: none;
+  transition: .5s;
+}
+input:focus ~ label,
+input:valid ~ label{
+top: -5px;
+}
+.inputbox input {
+  width: 100%;
+  height: 50px;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1em;
+  padding:0 35px 0 5px;
+  color: #ffffff;
+}
+.inputbox ion-icon{
+  position: absolute;
+  right: 8px;
+  color: #fff;
+  font-size: 1.2em;
+  top: 20px;
+}
+.forget{
+  margin: -15px 0 15px ;
+  font-size: .9em;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;  
+}
+
+.forget label input{
+  margin-right: 3px;
+  
+}
+.forget label a{
+  color: #fff;
+  text-decoration: none;
+}
+.forget label a:hover{
+  text-decoration: underline;
+}
+button{
+  width: 100%;
+  height: 40px;
+  border-radius: 40px;
+  background: #fff;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: 600;
+}
+.register{
+  font-size: .9em;
+  color: #fff;
+  text-align: center;
+  margin: 25px 0 10px;
+}
+.register p a{
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+}
+.register p a:hover{
+  text-decoration: underline;
 }
